--- a/Style.css
+++ b/Style.css
@@ -6,38 +6,30 @@
 	text-align: center;
 }
 
+.title{
+	font-size: 24px;
+}
+
 .engineers {
 	display: flex;
 	flex-wrap: wrap;
-	align-items: center;
-	justify-content: center;
+	gap: 25px;
 }
 
 .engineer {
-	width: 250px;
-}
-
-.engineer .img-clip {
-	height: 200px;
-	width: 200px;
-	overflow: hidden;
-	border-radius: 10px 50px;
-	margin-bottom: 8px;
-	background-color: black;
+	height: 350px;
 }
 
 .engineer img {
-	width: 100%;
+	height: 80%;
 }
 
 .engineer .caption {
 	background: lightgoldenrodyellow;
-	width: 190px;
 	border-radius: 10px;
 	border: solid;
 	padding: 5px;
-	margin-bottom: 40px;
-	font-weight: bold;
+	font-weight: bold; 
 }
 
 .artists {
@@ -45,20 +37,18 @@
 	flex-wrap: wrap;
 	font-family: arial;
 	font-weight: bold;
-	align-items: center;
-	justify-content: center;
+	gap: 25px;
 }
 
 .artist {
-	width: 150px;
+	height: 150px;
 }
 
 .artist img {
-	width: 100px;
+	height: 70%;
 }
 
 .artist .caption {
 	color: green;
-	width: 100px;
 	border: solid;
 }
