--- a/Style.css
+++ b/Style.css
@@ -1,61 +1,21 @@
-/*	Style as you normally would, as these styles demonstrate.
-	Micro Template system doesn't require any styles to work, 
-	and MT doesn't dirty the stylesheet. 
- */
+html, body {
+  height: 100%;
+  width: 100%;
+}
 
-* {
+.art-group {
 	text-align: center;
+	display:block;
 }
 
-H3{
-	margin: 50px;
-	font-family: Tahoma;
+.artists-header {
+	text-align: center;
+	display:block;
 }
 
-.title{
-	font-size: 24px;
-}
-
-.engineers {
-	display: flex;
-	flex-wrap: wrap;
-	gap: 25px;
-}
-
-.engineer {
-	height: 350px;
-}
-
-.engineer img {
-	height: 80%;
-}
-
-.engineer .caption {
-	background: lightgoldenrodyellow;
-	border-radius: 10px;
-	border: solid;
-	padding: 5px;
-	font-weight: bold; 
-}
-
-.artists {
-	display: flex;
-	flex-wrap: wrap;
-	font-family: arial;
-	font-weight: bold;
-	gap: 25px;
-}
 
 .artist {
-	height: 150px;
-}
-
-.artist img {
-	height: 70%;
-}
-
-.artist .caption {
-	color: green;
-	border: solid;
+	text-align: center;
+	display:block;
 }
 
